--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
+  adapter: postgresql
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
